--- a/style.css
+++ b/style.css
@@ -91,3 +91,8 @@ header {
 .how-img img {
   width: 40%;
 }
+@media only screen and (max-width: 600px) {
+  .marb {
+    margin-bottom: 30px;
+  }
+}
